--- a/src/components/CityCard/style.css
+++ b/src/components/CityCard/style.css
@@ -1,7 +1,7 @@
  img {
     border-radius: 2px;
     height: 200px;
-    width: 275px;
+    width: 270px;
     margin: 1rem;
     position: relative;
     box-shadow: 0 3px 6px rgb(170, 170, 170), 0 3px 6px #999;
@@ -14,3 +14,7 @@ img::hover {
     transform: scale(1.05);
     cursor: pointer;
   }
+
+.img-container {
+  margin: 0 auto;
+}
